[gd_scene load_steps=2 format=3 uid="uid://b0dqe05b86gyt"]

[ext_resource type="Script" path="res://objects/common/gun.gd" id="1_q86a8"]

[node name="Gun" type="Node3D"]
script = ExtResource("1_q86a8")

[node name="PrimaryParticles" type="GPUParticles3D" parent="."]
emitting = false
one_shot = true

[node name="SecondaryParticles" type="GPUParticles3D" parent="."]
emitting = false
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[node name="SFXEmitter" type="StudioEventEmitter3D" parent="."]
